fix contact alignment

--- a/src/styles/partials/_contact.scss
+++ b/src/styles/partials/_contact.scss
@@ -1,3 +1,8 @@
 .contact {
-  margin-left: 2rem;
+  display: flex;
+  flex-direction: column;
+
+  & > div {
+    margin-left: 2rem;
+  }
 }
